force-app/main/default/objects/Advertisement__c/Advertisement__c.object-meta.xml
<CustomObject>
    <label>Advertisement</label>
    <nameField>
        <displayFormat>AID-{000}</displayFormat>
        <label>Advertisement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertisements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>