force-app/main/default/objects/Advertisement__c/fields/Advertisement_Message__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Message__c</fullName>
    <label>Advertisement Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>