force-app/main/default/objects/Advertisement__c/fields/Advertisement_Posting_Site__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Posting_Site__c</fullName>
    <label>Advertisement Posting Site</label>
    <referenceTo>Website__c</referenceTo>
    <relationshipLabel>Advertisements</relationshipLabel>
    <relationshipName>Advertisements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>