force-app/main/default/objects/Advertisement__c/fields/Potion_Type__c.field-meta.xml
<CustomField>
    <fullName>Potion_Type__c</fullName>
    <label>Potion Type</label>
    <referenceTo>Potion__c</referenceTo>
    <relationshipLabel>Advertisements</relationshipLabel>
    <relationshipName>Advertisements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>