force-app/main/default/objects/Advertisement__c/validationRules/Require_Ad_Message.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Ad_Message</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Advertisement_Message__c)  &lt; 50</errorConditionFormula>
    <errorDisplayField>Advertisement_Message__c</errorDisplayField>
    <errorMessage>Your advertisement message should be at least 50 characters long.</errorMessage>
</ValidationRule>